# lilygo-t4-s3

./: .envrc  .gitignore  API.md  CMakeLists.txt  Kconfig  LICENSE  README.md  flake.nix  idf_component.yml  lilygo-t4-s3.c
include/bsp/: display.h  esp-bsp.h  lilygo-t4-s3.h  touch.h
priv_include/: bsp_err_check.h
